--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -7,8 +7,9 @@ services:
       - /var/lib/postgresql/data/
     env_file:
       - ./.env
+
   web:
-    build: yamdb_final:latest
+    image: axelvonreems/yamdb_final:latest
     restart: always
     volumes:
       - static_value:/app/static/
