--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -9,7 +9,7 @@ services:
       - ./.env
 
   web:
-    image: axelvonreems/yamdb_final:latest
+    image: axelvonreems/yamdb_final
     restart: always
     volumes:
       - static_value:/app/static/
