--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -40,7 +40,7 @@ jobs:
         - name: Push to Docker Hub
           uses: docker/build-push-action@v2
           with:
-            file: ./api_yamdb/Dockerfile
+            file: /api_yamdb/Dockerfile
             push: true
             tags: axelvonreems/yamdb_final
 
