--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -43,6 +43,7 @@ jobs:
             file: /api_yamdb/Dockerfile
             push: true
             tags: axelvonreems/yamdb_final
+            context: ./api_yamdb/
 
   deploy:
     runs-on: ubuntu-latest
