--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -40,10 +40,10 @@ jobs:
         - name: Push to Docker Hub
           uses: docker/build-push-action@v2
           with:
-            file: /api_yamdb/Dockerfile
+            context: ./api_yamdb
+            file: ./api_yamdb/Dockerfile
             push: true
             tags: axelvonreems/yamdb_final
-            context: ./api_yamdb/
 
   deploy:
     runs-on: ubuntu-latest
