--- a/yamdb_workflow.yml
+++ b/yamdb_workflow.yml
@@ -43,7 +43,7 @@ jobs:
             context: ./api_yamdb
             file: ./api_yamdb/Dockerfile
             push: true
-            tags: axelvonreems/yamdb_final
+            tags: axelvonreems/yamdb_final:v1
 
   deploy:
     runs-on: ubuntu-latest
@@ -59,6 +59,7 @@ jobs:
           script: |
             sudo docker-compose stop
             sudo docker-compose rm web
+            sudo docker pull axelvonreems/yamdb_final:v1
             touch .env
             echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
             echo DB_NAME=${{ secrets.DB_NAME }} >> .env
