--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -3,6 +3,10 @@ version: '3.8'
 services:
   db:
     image: postgres:13.0-alpine
+    environment:
+      - POSTGRES_DB='db'
+      - POSTGRES_HOST_AUTH_METHOD='trust'
+      - POSTGRES_PASSWORD='postgres'
     volumes:
       - /var/lib/postgresql/data/
     env_file:
