--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -4,8 +4,12 @@ services:
   db:
     image: postgres:13.0-alpine
     environment:
-      - POSTGRES_DB=db
-      - POSTGRES_HOST_AUTH_METHOD=trust
+      - DB_ENGINE=django.db.backends.postgresql
+      - DB_NAME=postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - DB_HOST=db
+      - DB_PORT=5432
     volumes:
       - /var/lib/postgresql/data/
     env_file:
