--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -16,8 +16,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
-        cd api_yamdb
-        pip install -r requirements.txt
+        pip install -r api_yamdb/requirements.txt
     - name: Test with flake8 and django tests
       run: |
         python -m flake8
@@ -25,6 +24,10 @@ jobs:
 
   build_and_push_to_docker_hub:
       name: Push Docker image to Docker Hub
+      if: contains('
+            refs/heads/master
+            refs/heads/main
+          ', github.ref)
       runs-on: ubuntu-latest
       needs: tests
       steps:
@@ -40,18 +43,14 @@ jobs:
         - name: Push to Docker Hub
           uses: docker/build-push-action@v2
           with:
-            context: ./api_yamdb
-            file: ./api_yamdb/Dockerfile
+            context: ./api_yamdb/
             push: true
             tags: axelvonreems/yamdb_final:v1
 
   deploy:
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
-    if: contains('
-          refs/heads/master
-          refs/heads/main
-        ', github.ref)
+    if: github.ref == 'refs/heads/master'
     steps:
       - name: executing remote ssh commands to deploy
         uses: appleboy/ssh-action@master
