--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -43,7 +43,8 @@ jobs:
         - name: Push to Docker Hub
           uses: docker/build-push-action@v2
           with:
-            context: ./api_yamdb/
+            context: ./api_yamdb
+            file: ./api_yamdb/Dockerfile
             push: true
             tags: axelvonreems/yamdb_final:v1
 
