--- a/yamdb_workflow.yml
+++ b/yamdb_workflow.yml
@@ -3,21 +3,23 @@ name: Django-app workflow
 on: [push]
 
 jobs:
-
   tests:
     runs-on: ubuntu-latest
+
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
         python-version: 3.7
+
     - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
+      run: | 
+        python -m pip install --upgrade pip 
         pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
-        cd api_yamdb
+        cd api_yamdb/
         pip install -r requirements.txt
+
     - name: Test with flake8 and django tests
       run: |
         python -m flake8
@@ -25,6 +27,7 @@ jobs:
 
   build_and_push_to_docker_hub:
       name: Push Docker image to Docker Hub
+      if: github.ref == 'refs/heads/master'
       runs-on: ubuntu-latest
       needs: tests
       steps:
@@ -43,15 +46,16 @@ jobs:
             context: ./api_yamdb
             file: ./api_yamdb/Dockerfile
             push: true
-            tags: axelvonreems/yamdb_final:v1
+            tags: axelvonreems/yamdb_final
 
   deploy:
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
-    if: contains('
-          refs/heads/master
-          refs/heads/main
-        ', github.ref)
+    if:
+      contains('
+        refs/heads/master
+        refs/heads/main
+      ', github.ref)
     steps:
       - name: executing remote ssh commands to deploy
         uses: appleboy/ssh-action@master
@@ -63,7 +67,7 @@ jobs:
           script: |
             sudo docker-compose stop
             sudo docker-compose rm web
-            sudo docker pull axelvonreems/yamdb_final:v1
+            sudo docker pull axelvonreems/yamdb_final
             touch .env
             echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
             echo DB_NAME=${{ secrets.DB_NAME }} >> .env
@@ -71,15 +75,15 @@ jobs:
             echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
             echo DB_HOST=${{ secrets.DB_HOST }} >> .env
             echo DB_PORT=${{ secrets.DB_PORT }} >> .env
-            sudo docker-compose up -d
+            sudo docker-compose up -d 
 
   send_message:
     runs-on: ubuntu-latest
     needs: deploy
     steps:
-    - name: send message
-      uses: appleboy/telegram-action@master
-      with:
-        to: ${{ secrets.TELEGRAM_TO }}
-        token: ${{ secrets.TELEGRAM_TOKEN }}
-        message: ${{ github.workflow }} успешно выполнен!
+      - name: send message
+        uses: appleboy/telegram-action@master
+        with:
+          to: ${{ secrets.TELEGRAM_TO }}
+          token: ${{ secrets.TELEGRAM_TOKEN }}
+          message: ${{ github.workflow }} успешно выполнен! Гав!
